# jsonschema-extractor

./: .coveragerc  .gitignore  .travis.yml  LICENSE  Makefile  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  ubuild.py
.github/workflows/: python-package.yaml
attrs_jsonchema/: __init__.py
attrs_jsonchema/tests/: test_full.py
attrs_jsonschema/: __init__.py  exceptions.py
attrs_jsonschema/tests/: test_full.py
attrs_schema/: __init__.py  compat.py  utils.py
attrs_schema/fields/: __init__.py  bool.py  boolean.py
attrs_schema/schema_extractor/: __init__.py  attrs_extractor.py  set.py  type_extractor.py
attrs_schema/tests/: test_full.py
attrs_schema/tests/fields/: test_bool.py
docs/: conf.py  index.rst
jsonschema_extractor/: __init__.py  attrs_extractor.py  compat.py  exceptions.py  extractor_set.py  typing_extractor.py
jsonschema_extractor/fields/: __init__.py  integer.py  string.py
jsonschema_extractor/schema_extractor/: __init__.py  set.py  type_extractor.py
jsonschema_extractor/tests/: conftest.py  test_attrs.py  test_attrs_future_annotations.py  test_attrs_type_annotation.py  test_attrs_validators.py  test_cattrs.py  test_full.py  test_typing.py
