[metadata]
name = jsonschema-extractor
author = "Yusuke Tsutsumi",
author_email = "yusuke@tsutsumi.io",
description = "a framework to extract jsonschemas from a variety of models."
long_description = file: README.rst
url = https://github.com/toumorokoshi/jsonschema-extractor
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License

[options]
zip_safe = true
packages = find:
include_package_data = true
install_requires =
    enum34; python_version < '3.4'
    typing; python_version < '3.5'

[options.packages.find]
exclude =
    tests*
    *.tests*